--- a/css/map.scss
+++ b/css/map.scss
@@ -3,271 +3,281 @@ $mc: #f25170;
 $bc: #e6e6eb;
 $borc: #e6e6eb;
 %list_fomat {
-    border-radius: 4vw;
-    box-shadow: 0.5vw 0.5vw 4vw 0.5vw rgba(59, 59, 59, 0.15);
-    background: #fff;
-    padding: 6vw 0;
+  border-radius: 4vw;
+  box-shadow: 0.5vw 0.5vw 4vw 0.5vw rgba(59, 59, 59, 0.15);
+  background: #fff;
+  padding: 6vw 0;
 }
 %list_h2 {
-    font-size: 7vw;
-    font-weight: 900;
-    padding: 0 4vw;
+  font-size: 7vw;
+  font-weight: 900;
+  padding: 0 4vw;
 }
 
 .background {
-    background: $bc;
-    position: relative;
-    width:100%; height:auto;
-    .searchbox {
-        .back {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            left: 2%;
-            content: "";
-            width: 50px;
-            height: 50px;
-            background: url(../img/ic_back.png) no-repeat;
-            background-size: 100% 100%;
-            &:hover{
-                background: url(../img/ic_back-on.png) no-repeat;
-            }
-                  }
-        position: fixed;
-        z-index: 100;
-        top: 0;
-        right: 0;
-        width: 100%;
-        padding: 2vw 5vw;
-        background: #fff;
-        .inputarea {
-            position: relative;
-            padding: 10px 0;
-            margin-left: 5%;
-            width: 95%;
-            border-bottom: 1px solid #222228;
-            &:before {
-                position: absolute;
-                top: 13px;
-                left: 0;
-                content: "";
-                width: 19px;
-                height: 19px;
-                background: url(../img/ic_glass-on.png) no-repeat;
-                background-size: 100% 100%;
-            }
-            input {
-                border:none;
-                outline-style: none;
-                margin-left: 5%;
-                padding-left: 5%;
-                width: 90%;
-                height: 28px;
-                box-sizing: border-box;
-                display: block;
-                margin: auto;
-                font-size: 18px;
-            }
-            div {
-                a {
-                    width: 20px;
-                    display:block;
-                    img {
-                        width: 20px;
-                    }
-                }
-            }          
-        }
-       
-    }  
-    .nearbox {
-        background: #fff;
-        .mapbox {
-            border-top: 1px solid $borc;   
-            position:relative;
-            top:0; left:0;        
-            .distance {
-                position:fixed;
-                left:0; top:80px;
-                width:100%;
-                z-index:10;
-                padding: 10px;
-                margin-bottom: 5px;
-                background:#fff;
-                flex-wrap:wrap;
-              
-                .nearby {
-                    width:100%;
-                    padding-top: 15px;   
-                    h3 {
-                        font-size: 18px;
-                        margin-bottom: 5px;
-                        display:inline-block;   
-                    }
-                    p {
-                       margin-left:5px;
-                       display:inline-block;color: #9999a0;
-                      }
-                      .location{  
-                        float:right;         background-color:whitesmoke;
-                        padding:2px;
-                        margin-top:5px;
-                  } 
-                }
-                .level {
-                    width: 90%;
-                    flex-wrap:wrap;
-                  > a{
-                       cursor:pointer;
-                        text-align:center;
-                        padding:3px 25px;
-                        width:100%;
-                        flex:1;
-                        &:hover{
-                            background-color: aliceblue;
-                        }
-                        p{
-                            width:100%;
-                         }
-                    }
-                }
-            }           
-            .map {
-                height: auto;
-               margin-top:19vh;             
-            }
-            .mapInfo{
-                text-align:center;
-                position:absolute;
-                bottom:0; right:5px;
-                z-index:10000;
-                background:rgba(255,255,255,0.3);
-                font-weight:bold;
-               > p{
-                   display:inline-block;
-                   margin-top:2px;
-                   color: #000;
-                   font-size:10px;
-                   a{
-                       font-size:10px;
-                       color: #000;
-                   }
-                }
-             }          
-        }
+  background: $bc;
+  position: relative;
+  width: 100%;
+  height: auto;
+  .searchbox {
+    .back {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      left: 2%;
+      content: "";
+      width: 50px;
+      height: 50px;
+      background: url(../img/ic_back.png) no-repeat;
+      background-size: 100% 100%;
+      &:hover {
+        background: url(../img/ic_back-on.png) no-repeat;
+      }
     }
-}
-.slider {
-    position: relative;
-    bottom:200px;
-    left:0px;
+    position: fixed;
     z-index: 100;
+    top: 0;
+    right: 0;
     width: 100%;
-    overflow:hidden;
-    cursor:grab; 
-    .listbox {
-        &.active{
-            cursor:grabbing;
-            transform:scale(1.05);
-            background:rgba(255,255,255,0.3);
-        }         
-        .items {           
-            border-radius: 2px;
-            padding: 10px 0;
-            font-size: 14px;
-            position: relative;
-            display:flex;
-            z-index:100;
-            width:100%;            transition:transform 3s ease-in-out;
-            white-space:nowrap;
-            transition:all .2s;
-            transform:scale(0.98);
-            will-change:transform;
-            user-select:none;
-            margin-left: 20px;                           
-           .item {              
-                border: 1px solid rgba(34, 34, 40, 0.15);
-                background:#fff;
-                margin-right: 40px;
-                padding: 10px;
-                border: 1px solid $borc;
-                width: 430px; 
-                display:flex;
-                flex-direction: column;
-              .con{
-                margin-left:1%;
-                .leftsec {
-                    display: inline-block;
-                    flex:1;
-                    font-size: 0;
-                               
-                    overflow: hidden;
-                    .thumb {
-                        width:100%; height:100%;
-                       > a{
-                           width:100%; height:100%;
-                        }
-                        img {
-                            width:100px; height:100px;
-                            border-radius: 3vw;
-                        }
-                      }
-                    }
-                .rightsec {
-                    flex:2;
-                    width: 250px;
-                    display: inline-block;
-                    vertical-align: top;
-                    box-sizing: border-box;
-                   margin-left:20px;
-                    font-size: 0;
-                     > div{
-                        margin-bottom: 6px;
-                        > h4 {
-                            font-size: 16px;
-                            text-transform:uppercase; 
-                              }
-                        #idx{
-                            text-align:center;
-                            vertical-align: center;
-                            width:25px; height:25px;
-                            border-radius:100%;
-                            border: 2px solid #4aa0ec;
-                        }
-                        > span {
-                           display:none;
-                        }
-                    }                   
-                   > h6 {                   
-                        color: #9999a0;
-                        margin-bottom: 10px;
-                    }
-                    .address {
-                        font-size: 13px;
-                        color: #9999a0;
-                        white-space:pre-wrap;
-                    }
-                }
-            }         
-            .appraisal {
-                margin:10px auto 0;
-                padding-top:10px;
-                width:94%;
-                text-align:left;
-                border-top:1px solid  #f0f0f3;
-                .like {
-                    background: url(../img/ic_like.png) no-repeat;
-                    background-size: 16px 16px;
-                    padding-left: 21px;
-                }
-                .write {
-                    margin-left: 14px;
-                    background: url(../img/ic_write.png) no-repeat;
-                    background-size: 16px 16px;
-                    padding-left: 21px;
-                }
+    padding: 2vw 5vw;
+    background: #fff;
+    .inputarea {
+      position: relative;
+      padding: 10px 0;
+      margin-left: 5%;
+      width: 95%;
+      border-bottom: 1px solid #222228;
+      &:before {
+        position: absolute;
+        top: 13px;
+        left: 0;
+        content: "";
+        width: 19px;
+        height: 19px;
+        background: url(../img/ic_glass-on.png) no-repeat;
+        background-size: 100% 100%;
+      }
+      input {
+        border: none;
+        outline-style: none;
+        margin-left: 5%;
+        padding-left: 5%;
+        width: 90%;
+        height: 28px;
+        box-sizing: border-box;
+        display: block;
+        margin: auto;
+        font-size: 18px;
+      }
+      div {
+        a {
+          width: 20px;
+          display: block;
+          img {
+            width: 20px;
+          }
+        }
+      }
+    }
+  }
+  .nearbox {
+    background: #fff;
+    .mapbox {
+      border-top: 1px solid $borc;
+      position: relative;
+      top: 0;
+      left: 0;
+      .distance {
+        position: fixed;
+        left: 0;
+        top: 80px;
+        width: 100%;
+        z-index: 10;
+        padding: 10px;
+        margin-bottom: 5px;
+        background: #fff;
+        flex-wrap: wrap;
+
+        .nearby {
+          width: 100%;
+          padding-top: 15px;
+          h3 {
+            font-size: 18px;
+            margin-bottom: 5px;
+            display: inline-block;
+          }
+          p {
+            margin-left: 5px;
+            display: inline-block;
+            color: #9999a0;
+          }
+          .location {
+            float: right;
+            background-color: whitesmoke;
+            padding: 2px;
+            margin-top: 5px;
+          }
+        }
+        .level {
+          width: 90%;
+          flex-wrap: wrap;
+          > a {
+            cursor: pointer;
+            text-align: center;
+            padding: 3px 25px;
+            width: 100%;
+            flex: 1;
+            &:hover {
+              background-color: aliceblue;
+            }
+            p {
+              width: 100%;
             }
           }
-       }   
-   }
+        }
+      }
+      .map {
+        height: auto;
+        margin-top: 19vh;
+      }
+      .mapInfo {
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        right: 5px;
+        z-index: 10000;
+        background: rgba(255, 255, 255, 0.3);
+        font-weight: bold;
+        > p {
+          display: inline-block;
+          margin-top: 2px;
+          color: #000;
+          font-size: 10px;
+          a {
+            font-size: 10px;
+            color: #000;
+          }
+        }
+      }
+    }
+  }
+}
+.slider {
+  position: relative;
+  bottom: 200px;
+  left: 0px;
+  z-index: 100;
+  width: 100%;
+  overflow: hidden;
+  cursor: grab;
+  .listbox {
+    &.active {
+      cursor: grabbing;
+      transform: scale(1.05);
+      background: rgba(255, 255, 255, 0.3);
+    }
+    .items {
+      border-radius: 2px;
+      padding: 10px 0;
+      font-size: 14px;
+      position: relative;
+      display: flex;
+      z-index: 100;
+      width: 100%;
+      transition: transform 3s ease-in-out;
+      white-space: nowrap;
+      transition: all 0.2s;
+      transform: scale(0.98);
+      will-change: transform;
+      user-select: none;
+      margin-left: 20px;
+      .item {
+        border: 1px solid rgba(34, 34, 40, 0.15);
+        background: #fff;
+        margin-right: 40px;
+        padding: 10px;
+        border: 1px solid $borc;
+        width: 430px;
+        display: flex;
+        flex-direction: column;
+        .con {
+          margin-left: 1%;
+          .leftsec {
+            display: inline-block;
+            flex: 1;
+            font-size: 0;
+
+            overflow: hidden;
+            .thumb {
+              width: 100%;
+              height: 100%;
+              > a {
+                width: 100%;
+                height: 100%;
+              }
+              img {
+                width: 100px;
+                height: 100px;
+                border-radius: 3vw;
+              }
+            }
+          }
+          .rightsec {
+            flex: 2;
+            width: 250px;
+            display: inline-block;
+            vertical-align: top;
+            box-sizing: border-box;
+            margin-left: 20px;
+            font-size: 0;
+            > div {
+              margin-bottom: 6px;
+              > h4 {
+                font-size: 16px;
+                text-transform: uppercase;
+              }
+              #idx {
+                text-align: center;
+                vertical-align: center;
+                width: 25px;
+                height: 25px;
+                border-radius: 100%;
+                border: 2px solid #4aa0ec;
+              }
+              > span {
+                display: none;
+              }
+            }
+            > h6 {
+              color: #9999a0;
+              margin-bottom: 10px;
+            }
+            .address {
+              font-size: 13px;
+              color: #9999a0;
+              white-space: pre-wrap;
+            }
+          }
+        }
+        .appraisal {
+          margin: 10px auto 0;
+          padding-top: 10px;
+          width: 94%;
+          text-align: left;
+          border-top: 1px solid #f0f0f3;
+          .like {
+            background: url(../img/ic_like.png) no-repeat;
+            background-size: 16px 16px;
+            padding-left: 21px;
+          }
+          .write {
+            margin-left: 14px;
+            background: url(../img/ic_write.png) no-repeat;
+            background-size: 16px 16px;
+            padding-left: 21px;
+          }
+        }
+      }
+    }
+  }
 }
